# casfa

./: .env.casfa-dev.example  .env.example  .gitignore  README.md  biome.json  otavia.yaml  package.json  stack.yaml  tsconfig.cell-backend.json  tsconfig.cell-frontend.json  tsconfig.json
.changeset/: config.json
.cursor/: mcp.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
apps/agent/: .env.example  .env.local.example  cell.yaml  package.json
apps/cell-cli/: package.json  tsconfig.json
apps/cli/: README.zh-CN.md  package.json  tsconfig.json  tsup.config.ts
apps/frontend/: index.html  package.json  vite.config.ts
apps/image-workshop/: .env.example  .env.local.example  .gitignore  README.md  cell.symbiont.yaml  cell.yaml  package.json  serverless.yml  tsconfig.json
backend/apps/mitsein-cli/: README.md  pyproject.toml
backend/apps/mitsein-cli/mitsein_cli/: __init__.py  main.py
backend/apps/mitsein-cli/mitsein_cli/commands/: __init__.py  dev.py  version.py
backend/apps/mitsein-cli/mitsein_cli/core/: __init__.py  client.py  config.py  credentials.py  errors.py  output.py
backend/apps/mitsein-cli/tests/unit/: test_client.py  test_credentials.py  test_output.py
docs/: CAS_BINARY_FORMAT.md  CODING-CONVENTIONS.md  README.md  TODO.md  casfa-system-intro.md  cell-config-rules.md  cloudflare-tunnel-dev.md  environment-config.md  id-format-unification.md  ownership-and-permissions.md  put-node-children-auth.md  redis-caching.md  root-delegate-jwt-auth.md  shared-component-extraction.md  storage-has-removal.md
scripts/: build-pkg.ts
(+1165 files in other folders)
